--- a/src/styles/ShoppingCart.css
+++ b/src/styles/ShoppingCart.css
@@ -128,4 +128,7 @@
         margin-left: 2%;
         margin-right: 2%;
     }
+    .myCartIcons {
+        font-size: 25px;
+    }
   }
